[package]
name = "lib_renegade_x_launcher"
version = "0.1.0"
authors = ["SonnyX"]
edition = "2018"

[dependencies]
renegadex_patcher = { git = "https://github.com/SonnyX/RenegadeX-patcher-lib.git", rev = "1b82927" }
rust-ini = "0.18.0"
flexi_logger = "0.23"

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = 2

[profile.release]
opt-level = 'z'
lto=true
